k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    component: client
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
      - name: semestr-client
        image: danielgaldev/semestr-client
        imagePullPolicy: Always
        ports:
        - containerPort: 80
