k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    component: db
spec:
  replicas: 1
  selector:
    matchLabels:
      component: db
  template:
    metadata:
      labels:
        component: db
    spec:
      containers:
        - name: semestr-db
          image: postgres:12.0-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/docker/pgdata
              name: pgdata-volume
      volumes:
        - name: pgdata-volume
          hostPath:
            path: /var/lib/docker/pgdata
