k8s/client-simple-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: client-simple-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 80
      nodePort: 31515
  selector:
    component: client
