k8s/db-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: db-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: db
  ports:
    - port: 5432
      targetPort: 5432
